Clarify Safari & 3P cookies

--- a/index.html
+++ b/index.html
@@ -801,9 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser's own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 24 January 2020<br>
-Update details about latest Cliqz version.<br>
-Clarify how Brave strips tracking parameters from URLs.</p>
+<p><strong>Last updated</strong>: 30 January 2020<br>
+Clarify Safari's cookie restrictions in third-party context.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -872,7 +871,7 @@ Clarify how Brave strips tracking parameters from URLs.</p>
 <td><p><a href="/cliqz/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Access restricted for known trackers, with mitigations for user interaction and critical flows (e.g. some oAuth implementations).</p><p><a href="/cliqz/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Cookies set on tracker origins without first-party interaction expire in 1 hour.</p></td>
 <td><a href="/edge/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
 <td><a href="/firefox/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
-<td><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Access restricted for all third-party cookies if no prior interaction with the website whose URL is in the address bar.</span></p><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted if no prior cookies set on the third-party domain.</p><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p></td>
+<td><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Access restricted for all third-party cookies if no user interaction in the last 30 days with the website whose URL is in the address bar.</span></p><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted if no prior cookies set on the third-party domain.</p><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p></td>
 </tr>
 <tr>
 <td align="right"><strong>Cookies in 1st party context</strong></td>
