Update Safari ITP

--- a/safari/index.html
+++ b/safari/index.html
@@ -830,6 +830,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
     <li><a href="#other-third-party-storage">Other third-party storage</a></li>
     <li><a href="#other-first-party-storage">Other first-party storage</a></li>
     <li><a href="#referrer">Referrer</a></li>
+    <li><a href="#other">Other</a></li>
   </ul>
 </nav>
     </div>
@@ -883,11 +884,11 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </tr>
 <tr>
 <td><strong>Latest update</strong></td>
-<td><a href="https://webkit.org/blog/9661/preventing-tracking-prevention-tracking/">Documented 10 Dec 2019</a></td>
+<td><a href="https://webkit.org/blog/10218/full-third-party-cookie-blocking-and-more/">Documented 24 Mar 2020</a></td>
 </tr>
 <tr>
 <td><strong>Latest update includes</strong></td>
-<td><ul><li><strong><em>All</em> cross-site request referrer headers are downgraded to origin</strong></li><li><strong>Cookie access blocked from <em>all</em> third-party requests where the domain has not received user interaction in first-party context</strong></li></ul></td>
+<td><ul><li><strong><em>All</em> third-party cookie access is blocked.</li><li></strong>All script-writable storage is expired in 7 days since last interaction with the site.<strong></li><li></strong>All cross-site request headers and <code>document.referrer</code> are downgraded to origin.**</li></ul></td>
 </tr>
 <tr>
 <td><strong>User controls</strong></td>
@@ -914,25 +915,9 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 
 <p>To monitor the list of domains classified by your Safari instance, or to test ITP in action, you can utilize the <strong>ITP Debug Mode</strong>, with instructions for use found behind <a href="https://webkit.org/blog/9521/intelligent-tracking-prevention-2-3/">this link</a>.</p>
 <h2 id="third-party-cookies">Third-party cookies</h2>
-<p>Safari has a number of different approaches to blocking third-party cookie access.</p>
-<p>First, there's Safari's <strong>default cookie policy</strong>, which has been active since as early as 2003. The default policy prevents domains of a third-party site from setting cookies <strong>if the site hasn't already been &ldquo;seeded&rdquo; with a cookie in first-party context</strong>. This policy is always in place, and can not be circumvented with e.g. the Storage Access API (see below).</p>
-
-<div class="notices note" ><p><strong>Example</strong>: The user visits a website which sends a request to <code>www.third-party-domain.com</code>, which subsequently attempts to set a cookie in the HTTP response. Safari blocks this, as the user's browser has no cookies set on <code>www.third-party-domain.com</code> yet. If the user were to visit <code>www.third-party-comain.com</code> in first-party context (actually typing the URL in the browser omnibox), by setting a cookie in first-party context would relax this default cookie policy for this particular site in future third-party requests.</p>
-</div>
-
-<p>Second, Safari blocks all third-party requests on a site from accessing cookies if the site has not received <strong>user interaction</strong> in the <strong>first-party context</strong> (i.e. with the URL in the address bar) in the last 30 days <em>of Safari use</em>.</p>
-
-<div class="notices note" ><p><strong>Example</strong>: The user visits <code>www.site-example.com</code>. Until the user <em>interacts</em> with the site (click, tap, text input), no third-party domain will have access to its cookies. If the user interacts with the site, then third-party requests will have storage access for the next 30 days of Safari use (unless other policies block such access).</p>
-</div>
-
-<p>Finally, if the domain is classified as having <strong>cross-site tracking capabilities</strong>, third-party cookie access is blocked.</p>
-<p>If the browser wants to access cookies on third-party domains classified by ITP, it needs to utilize the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Storage_Access_API#Safari_implementation_differences">Storage Access API</a> to prompt the user whether it is OK to share data with the third-party domain.</p>
+<p>Safari blocks <strong>all</strong> access to cookies in third-party context.</p>
 <h3 id="storage-access-api">Storage Access API</h3>
 <p>Safari introduced the <a href="https://webkit.org/blog/8124/introducing-storage-access-api/">Storage Access API</a> in February 2018. With the Storage Access API, a website can ask the user's permission to access storage in an embedded cross-site resource which would otherwise have its cookie access restricted.</p>
-
-<div class="notices info" ><p>This will <strong>not</strong> allow access to cookies blocked by Safari's <strong>default cookie policy</strong>.</p>
-</div>
-
 <p>To be able to use the Storage Access API, the embedded site must have been interacted with in first-party context (URL in address bar) in the last 30 days of Safari use.</p>
 
 <div class="notices note" ><p><strong>Example</strong>: The user is on <code>www.blog-site.com</code>, which loads a comment service in an <code>&lt;iframe&gt;</code> from <code>www.comment-service.com</code>. Since this is a cross-site resource load, ITP will not allow access to the site due to the site not having prior cookies set (Safari's default cookie policy), and because the user hasn't interacted with the site in first-party context in the last 30 days of Safari use.</p>
@@ -967,16 +952,13 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <p><code>IndexedDB</code> is restricted.</p>
 <p><code>sessionStorage</code> has no restrictions.</p>
 <h2 id="other-first-party-storage">Other first-party storage</h2>
-<p>If the referring domain is a known tracker, and if the URL has query parameters (<code>?key=value</code>) or fragments (<code>#somevalue</code>), then <strong>all</strong> non-cookie website storage in first-party context is restricted to maximum <strong>7 days</strong> lifetime since the last user interaction (click, tap, or text input) with the site.</p>
-
-<div class="notices note" ><p><strong>Example</strong>: The user clicks a link on <code>www.known-tracker.com</code> (a classified domain), and the landing page URL is appended with the fragment <code>#abcd1234</code>. ITP sets the maximum lifetime of all non-cookie website storage (e.g. <code>localStorage</code>) to <strong>7 days</strong>, and the timer starts from the first interaction with the site. If the user doesn't interact with the site again for 7 days, all non-cookie storage is deleted.</p>
-</div>
-
-<p>If there is <strong>no user interaction</strong> with the first-party site, this type of storage is expired within few seconds.</p>
+<p>All script-writable storage is expired in <strong>7 days</strong> since last interaction with the site (click, tap, or text input).</p>
 <h2 id="referrer">Referrer</h2>
-<p>Safari downgrades referrers for <strong>all</strong> non-navigational cross-site requests to their <strong>origin</strong>. Thus if a page on <code>https://www.domain.com/page/page.html</code> tried to load an image from <code>https://images.imagecdn.com</code>, the <code>referer</code> header would show <code>https://www.domain.com</code> rather than the full referrer.</p>
+<p>Safari downgrades <code>document.referrer</code> to <strong>origin</strong> in cross-site navigation.</p>
+<p>Safari downgrades the referrer in cross-site request headers to <strong>origin</strong>. Thus if a page on <code>https://www.domain.com/page/page.html</code> tried to load an image from <code>https://images.imagecdn.com</code>, the <code>referer</code> header would show <code>https://www.domain.com</code> rather than the full referrer.</p>
 <p>Furthermore, if the referring domain is a known tracker, and if the <em>referring page</em> has query parameters (<code>?key=value</code>) or fragments (<code>#somevalue</code>), the <code>document.referrer</code> property is downgraded to <strong>effective top-level domain plus one part</strong> (eTLD+1). Thus a request originating from <code>https://sub.classified.domain.com/page?userId=abcd1234</code> would end up as <code>https://domain.com</code> in the <code>document.referrer</code> property of the landing page.</p>
 <p>For navigational requests, <code>no-referrer-when-downgrade</code> applies.</p>
+<h2 id="other">Other</h2>
 
 
 
