--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser's own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 30 January 2020<br>
-Clarify Safari's cookie restrictions in third-party context.</p>
+<p><strong>Last updated</strong>: 25 March 2020<br>
+Updated Safari with latest ITP changes.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -871,7 +871,7 @@ Clarify Safari's cookie restrictions in third-party context.</p>
 <td><p><a href="/cliqz/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Access restricted for known trackers, with mitigations for user interaction and critical flows (e.g. some oAuth implementations).</p><p><a href="/cliqz/#third-party-cookies" rel="footnote" class="fa fa-info-circle"></a> Cookies set on tracker origins without first-party interaction expire in 1 hour.</p></td>
 <td><a href="/edge/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
 <td><a href="/firefox/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</td>
-<td><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Access restricted for all third-party cookies if no user interaction in the last 30 days with the website whose URL is in the address bar.</span></p><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted if no prior cookies set on the third-party domain.</p><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> Access restricted for known trackers.</p></td>
+<td><p><a href="/safari/#third-party-cookies" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">All access restricted, except with Storage Access API.</span></p></td>
 </tr>
 <tr>
 <td align="right"><strong>Cookies in 1st party context</strong></td>
@@ -898,7 +898,7 @@ Clarify Safari's cookie restrictions in third-party context.</p>
 <td><a href="/cliqz/#other-first-party-storage" rel="footnote" class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/edge/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/firefox/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
-<td><a href="/safari/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> Restricted to 7 days since last interaction (click, tap, text input) on pages with URL decoration (query parameters or fragments) when referring domain is a known tracker.</td>
+<td><a href="/safari/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Restricted to 7 days since last interaction (click, tap, text input) with the site.</span></td>
 </tr>
 <tr>
 <td align="right"><strong>Referrer</strong></td>
@@ -907,7 +907,7 @@ Clarify Safari's cookie restrictions in third-party context.</p>
 <td><a href="/cliqz/#referrer" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Strip all cross-origin referrers to origin.</span></td>
 <td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
 <td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
-<td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Strip all referrers in non-navigational HTTP requests to origin.</span></p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), <code>document.referrer</code> is downgraded to eTLD+1.</p></td>
+<td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Downgrade cross-site <code>document.referrer</code> to origin.</span></p><p><a href="/safari/#referrer" rel="footnote" class="fa fa-info-circle"></a> Downgrade all cross-site request headers to origin.</p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), <code>document.referrer</code> is downgraded to eTLD+1.</p></td>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
@@ -916,7 +916,7 @@ Clarify Safari's cookie restrictions in third-party context.</p>
 <td><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</td>
 <td>n/a</td>
 <td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</span></td>
-<td>n/a</td>
+<td><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Detect delays in bounce trackers and treat them as regular bounces.</span></td>
 </tr>
 </tbody>
 </table>
@@ -924,15 +924,13 @@ Clarify Safari's cookie restrictions in third-party context.</p>
 </div>
 
 <h3 id="bubbling-under">Bubbling under</h3>
-<p><strong>Last updated</strong>: 6 March 2020</p>
+<p><strong>Last updated</strong>: 25 March 2020</p>
 <ul>
+<li>Safari: Remove the <a href="https://webkit.org/blog/8311/intelligent-tracking-prevention-2-0/">Temporary Compatibility Fix</a> which gives storage access to embedded popups in some contexts (e.g. login flows).</li>
 <li>Firefox: Remove browser storage on sites that set tracking cookies, if the site has not been interacted with in 30 days (<a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1599262">link to issue</a>)</li>
 <li>Brave: Add noise to Canvas, WebGL and AudioContext APIs to make fingerprinting more difficult (<a href="https://github.com/brave/brave-browser/wiki/Fingerprinting-Protections">link to wiki page</a>)</li>
 <li>Brave: Cap all script-writable storage to a maximum lifetime (<a href="https://github.com/brave/brave-browser/issues/4438">link to issue</a>)</li>
-<li>Safari: Treat programmatically initiated client-side redirects that happen within 5 seconds after page load as redirects for ITP purposes (<a href="https://trac.webkit.org/changeset/254296/webkit">WebKit changeset</a>)</li>
-<li>Safari: <a href="https://trac.webkit.org/changeset/251467/webkit">Block all third-party cookies</a></li>
 <li>Safari: <code>isLoggedIn</code> (<a href="https://lists.w3.org/Archives/Public/public-webappsec/2019Sep/0004.html">original explainer</a> and <a href="https://trac.webkit.org/changeset/250944/webkit">WebKit changeset for experimental feature</a>)</li>
-<li>Safari: Expire non-cookie website data in 7 days since last user interaction (<a href="https://trac.webkit.org/changeset/253082/webkit">WebKit changeset</a>)</li>
 <li>Firefox, Edge, Chrome: <a href="https://www.chromestatus.com/feature/6251880185331712"><code>strict-origin-when-cross-origin</code> default referrer policy</a></li>
 </ul>
 <h2 id="faq">FAQ</h2>
