--- a/brave/index.html
+++ b/brave/index.html
@@ -880,11 +880,11 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </tr>
 <tr>
 <td><strong>Latest update deployed in</strong></td>
-<td><a href="https://brave.com/latest/">v1.1.20</a></td>
+<td><a href="https://community.brave.com/t/release-channel-v1-7-92/118997">v1.7.92</a></td>
 </tr>
 <tr>
 <td><strong>Latest update includes</strong></td>
-<td><a href="https://github.com/brave/brave-browser/issues/4239">Removed known user tracking parameters from query strings</a></td>
+<td><a href="https://github.com/brave/brave-browser/issues/5614">Randomize HTML canvas fingerprint per first-party domain</a></td>
 </tr>
 <tr>
 <td><strong>User controls</strong></td>
@@ -961,6 +961,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p><strong>Example</strong>: If the user types <code>https://www.domain.com/?fbclid=1.2.3.4</code> in the omnibox and presses enter, Brave strips the parameter in an internal redirect. Similarly, if the browser makes a request to <code>https://www.domain.com/tracking-pixel.gif?mc_eid=23456</code>, Brave strips the parameter out of the request before it hits the target server.</p>
 </div>
 
+<p>Brave has lots of initiatives for <a href="https://brave.com/brave-fingerprinting-and-privacy-budgets/">neutralizing fingerprinting surfaces</a>, with features such as <a href="https://github.com/brave/brave-browser/issues/5614">randomized HTML canvas fingerprints</a> preferred over just removing or clearing the fingerprint surfaces.</p>
 
 
 
