--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser's own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 25 March 2020<br>
+<p><strong>Last updated</strong>: 15 April 2020<br>
 Updated Safari with latest ITP changes.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
@@ -911,7 +911,7 @@ Updated Safari with latest ITP changes.</p>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
-<td><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>) from URL query strings.</span></td>
+<td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Randomize HTML canvas fingerprints by first-party domain.</span></p></td>
 <td>n/a</td>
 <td><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</td>
 <td>n/a</td>
