--- a/index.html
+++ b/index.html
@@ -924,8 +924,11 @@ Add details about bounce tracking protection in Firefox 79.</p>
 </div>
 
 <h3 id="bubbling-under">Bubbling under</h3>
-<p><strong>Last updated</strong>: 5 August 2020</p>
+<p><strong>Last updated</strong>: 6 August 2020</p>
 <ul>
+<li>Safari: Detect CNAME redirects to third-party domains, and limit expiration of cookies set in HTTP response to 7 days (<a href="https://bugs.webkit.org/show_bug.cgi?id=215201">link to WebKit bug</a>).</li>
+<li>Safari: <code>isLoggedIn</code> (<a href="https://github.com/privacycg/is-logged-in">work item in the Privacy Community Group</a>.</li>
+<li>Chrome 85: <a href="https://www.chromestatus.com/feature/6251880185331712"><code>strict-origin-when-cross-origin</code> default referrer policy</a>.</li>
 <li>Brave: Add noise to Canvas, WebGL and AudioContext APIs to make fingerprinting more difficult (<a href="https://github.com/brave/brave-browser/wiki/Fingerprinting-Protections">link to wiki page</a>).</li>
 <li>Brave: Cap all script-writable storage to a maximum lifetime (<a href="https://github.com/brave/brave-browser/issues/4438">link to issue</a>).</li>
 <li>Chrome: Deprecation of the User-Agent string (<a href="https://groups.google.com/a/chromium.org/forum/m/#!msg/blink-dev/-2JIRNMWJ7s/yHe4tQNLCgAJ">link to discussion</a>).</li>
@@ -933,9 +936,7 @@ Add details about bounce tracking protection in Firefox 79.</p>
 <li>Safari: Exempt web applications from having their local browser data erased (<a href="https://trac.webkit.org/changeset/259440/webkit">link to changeset</a>).</li>
 <li>Safari: Enforce cookies to SameSite=Strict if passed in bounce trackers (<a href="https://trac.webkit.org/changeset/259275/webkit">link to changeset</a>).</li>
 <li>Safari: Remove the <a href="https://webkit.org/blog/8311/intelligent-tracking-prevention-2-0/">Temporary Compatibility Fix</a> which gives storage access to embedded popups in some contexts (e.g. login flows).</li>
-<li>Safari: <code>isLoggedIn</code> (<a href="https://github.com/privacycg/is-logged-in">work item in the Privacy Community Group</a>.</li>
 <li>Firefox, Edge: <code>strict-origin-when-cross-origin</code> default referrer policy.</li>
-<li>Chrome 85: <a href="https://www.chromestatus.com/feature/6251880185331712"><code>strict-origin-when-cross-origin</code> default referrer policy</a>.</li>
 </ul>
 <h2 id="faq">FAQ</h2>
 <h3 id="1-why-does-this-resource-exist">1. Why does this resource exist?</h3>
