--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ Add details about bounce tracking protection in Firefox 79.</p>
 <h3 id="bubbling-under">Bubbling under</h3>
 <p><strong>Last updated</strong>: 6 August 2020</p>
 <ul>
-<li>Safari: Detect CNAME redirects to third-party domains, and limit expiration of cookies set in HTTP response to 7 days (<a href="https://bugs.webkit.org/show_bug.cgi?id=215201">link to WebKit bug</a>).</li>
+<li>Safari: Detect same-site subresource requests that CNAME to cross-site origins, and limit expiration of cookies set in HTTP response to 7 days (<a href="https://bugs.webkit.org/show_bug.cgi?id=215201">link to WebKit bug</a>).</li>
 <li>Safari: <code>isLoggedIn</code> (<a href="https://github.com/privacycg/is-logged-in">work item in the Privacy Community Group</a>.</li>
 <li>Chrome 85: <a href="https://www.chromestatus.com/feature/6251880185331712"><code>strict-origin-when-cross-origin</code> default referrer policy</a>.</li>
 <li>Brave: Add noise to Canvas, WebGL and AudioContext APIs to make fingerprinting more difficult (<a href="https://github.com/brave/brave-browser/wiki/Fingerprinting-Protections">link to wiki page</a>).</li>
