--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser&rsquo;s own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 11 September 2020<br>
-Added Chrome 85 new referrer policy.</p>
+<p><strong>Last updated</strong>: 27 September 2020<br>
+Updated Firefox and Edge Referrer policy.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -859,7 +859,7 @@ Added Chrome 85 new referrer policy.</p>
 <td align="right"><strong>Classification of &ldquo;known trackers&rdquo;</strong></td>
 <td><a href="/brave/#classification-of-known-trackers" class="fa fa-info-circle" rel="footnote"></a> Multiple filter lists</td>
 <td><a href="/chrome/#classification-of-known-trackers" rel="footnote" class="fa fa-info-circle"></a> n/a</td>
-<td><a href="/edge/#classification-of-known-trackers" rel="footnote" class="fa fa-info-circle"></a> Trust Protection Lists (<span class="new">with engagement and organization mitigation</span>)</td>
+<td><a href="/edge/#classification-of-known-trackers" rel="footnote" class="fa fa-info-circle"></a> Trust Protection Lists (with engagement and organization mitigation)</td>
 <td><a href="/firefox/#classification-of-known-trackers" rel="footnote" class="fa fa-info-circle"></a> Disconnect.me</td>
 <td><a href="/safari/#classification-of-known-trackers" rel="footnote" class="fa fa-info-circle"></a> Algorithmic</td>
 <td><a href="/cliqz/#classification-of-known-trackers" rel="footnote" class="fa fa-info-circle"></a> Algorithmic</td>
@@ -904,8 +904,8 @@ Added Chrome 85 new referrer policy.</p>
 <td align="right"><strong>Referrer</strong></td>
 <td><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Cross-site referrers are spoofed (set to the referred-to rather than the referred-from origin) in non-navigational HTTP requests.</p><p><a href="/brave/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Cross-site referrers are stripped in navigational HTTP requests.</p><p><a href="/brave/#referrer" rel="footnote" class="fa fa-info-circle"></a> Same-site navigation preserves the referrer.</p></td>
 <td><a href="/chrome/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
-<td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
-<td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
+<td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Default browser policy (<code>strict-origin-when-cross-origin</code>)</span></td>
+<td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <code>strict-origin-when-cross-origin</code> for requests to known tracker domains, otherwise <code>no-referrer-when-downgrade</code>.</td>
 <td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Downgrade cross-site <code>document.referrer</code> to origin.</p><p><a href="/safari/#referrer" rel="footnote" class="fa fa-info-circle"></a> Downgrade all cross-site request headers to origin.</p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), <code>document.referrer</code> is downgraded to eTLD+1.</p></td>
 <td><a href="/cliqz/#referrer" rel="footnote" class="fa fa-info-circle"></a> Strip all cross-origin referrers to origin.</td>
 </tr>
@@ -914,7 +914,7 @@ Added Chrome 85 new referrer policy.</p>
 <td><p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>) from URL query strings.</p> <p><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Randomize HTML canvas fingerprints by first-party domain.</span></p></td>
 <td>n/a</td>
 <td>n/a</td>
-<td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</span></td>
+<td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</td>
 <td><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> Detect delays in bounce trackers and treat them as regular bounces.</p><p><a href="/safari/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Extend WebKit&rsquo;s tracking protections to all browsers running on iOS 14 and newer. These protections can only be disabled by the user.</span></p></td>
 <td><p><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</p> <p><a href="/cliqz/" rel="footnote" class="fa fa-info-circle"></a> <span class="new">The Cliqz project has been <a href="https://cliqz.com/announcement.html">shut down</a>.</span></p></td>
 </tr>
