Update browsers and content with latest changes

--- a/firefox/index.html
+++ b/firefox/index.html
@@ -937,7 +937,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </div>
 
 <h2 id="referrer">Referrer</h2>
-<p>Default browser policy (<code>no-referrer-when-downgrade</code>).</p>
+<p>HTTP requests to known tracking domains are sent with the referrer policy of <code>strict-origin-with-cross-origin</code>. Other requests use <code>no-referrer-when-downgrade</code>.</p>
 <h2 id="other">Other</h2>
 <p>If the domain is in the Fingerprinting category of Disconnect.me <strong>and</strong> in one of the tracking categories (Advertising, Analytics, or Social), all third-party <strong>requests</strong> to the domain are blocked.</p>
 
